# partty

./: .gitignore  LICENSE.md  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: release-notes-v0.1.0.md
.github/workflows/: release.yml
src/: main.ts  state.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  pty.rs
src/db/: setups.ts
src/terminal/: TabManager.ts  Terminal.ts
