[package]
name = "partty"
version = "0.1.0"
description = "Terminal emulator with multiple TTYs"
edition = "2021"
rust-version = "1.77"

[lib]
name = "partty_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
parking_lot = "0.12"
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
